--- a/0-courses.html
+++ b/0-courses.html
@@ -44,7 +44,7 @@
                     <img src="images/logo.png" alt="logo" class="logo_name">
                 </div>
                 <div class="link_header d-sm-block d-none">
-                    <a href="">COURSE</a>
+                    <a href="" style="color: #C271FF; border-bottom: 1px solid white;">COURSE</a>
                     <a href="">PRICING</a>
                     <a href="">LOGIN</a>
                 </div>
