--- a/0-homepage.html
+++ b/0-homepage.html
@@ -68,7 +68,7 @@
             </div>
             <div>
                 <p class="text_header text-center"><span class="learn_header">Learn</span> from the pros</p>
-                <div class="div_avatar_1">
+                <div class="div_avatar_1 col_">
                     <div class="div_avatar">
                         <div class="list_avatar">
                             <img src="images/profile_1.jpg" alt="profile_1">
