--- a/1-homepage.html
+++ b/1-homepage.html
@@ -97,15 +97,15 @@
     </header>
     <section class="text-white">
         <div class="align-self-center">
-            <div class="carousel slide" data-ride="carousel" id="testimonialControls">
+            <div class="carousel slide carrousel_1" data-ride="carousel" id="testimonialControls">
                 <div class="carousel-inner">
                     <div class="carousel-item justify-content-center active">
                         <div
                             class="testimonial d-flex flex-column flex-md-row justify-content-around justify-content-md-center align-items-center">
                             <img class="rounded-circle mr-sm-5 mb-4 mb-md-0" src="images/profile_5.jpg" alt="">
                             <div class="testimonial-text flex-column">
-                                <p class="mb-4">« Those tutorials are concise and go straight to the point. I can't
-                                    think of a better place to learn smiling. And it's so fun!</p>
+                                <q class="mb-4 footer">« Those tutorials are concise and go straight to the point. I can't
+                                    think of a better place to learn smiling. And it's so fun!</q>
                                 <h5 class="font-weight-bold">Person Name</h5>
                                 <p class="font-italic">weather presenter</p>
                             </div>
