--- a/2-homepage.html
+++ b/2-homepage.html
@@ -166,7 +166,7 @@
     </section>
     <section class="videos text-black d-flex" id="videos">
         <div class="container align-self-center">
-            <h2 class="title text-center mb-5 mt-5"><span class="text-purple"><b style="color: #C271FF;">Latest</b></span> videos</h2>
+            <header class="title text-center mb-5 mt-5"><span class="text-purple"><b style="color: #C271FF;">Latest</b></span> videos</header>
             <div class="carousel slide mb-5" data-ride="carousel" id="latestControls">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
